# wordle-solver

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  shell.nix
.beads/: config.yaml  issues.jsonl
.github/workflows/: docker-publish.yml
src/: lib.rs  main.rs
templates/: base.html  game.html
templates/partials/: reload_status.html  results.html  suggestions.html
