[package]
name = "wordle_word"
version = "1.0.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
reqwest = { version = "0.12.8", features = ["blocking"] }
scraper = "0.20.0"
axum = "0.8"
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "web"
path = "src/bin/web.rs"
